<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_description">Please sign in to continue</string>
    <string name="sign_up_message">Don\'t have an account? <b><font color="#2196F3">Sign up</font></b></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_message">Already have a account? <b><font color="#2196F3">Sign in</font></b></string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="empty_email">Fill the email</string>
    <string name="email_not_valid">email not valid, try again</string>
    <string name="empty_password">Fill the password</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="password_min_message">Password must be at least 6 characters</string>
    <string name="empty_name">Fill your full name</string>
    <string name="password_not_match">Password not match</string>
    <string name="account_image">account image</string>
    <string name="more">more</string>
    <string name="logout">logout</string>
    <string name="logout_description">Are you sure to logout?</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="ago">ago</string>
    <string name="sec">secs</string>
    <string name="one_sec">one sec</string>
    <string name="min">mins</string>
    <string name="one_min">one min</string>
    <string name="hour">hours</string>
    <string name="one_hour">one hour</string>
    <string name="year">years</string>
    <string name="one_year">one year</string>
    <string name="month">months</string>
    <string name="one_month">one month</string>
    <string name="week">weeks</string>
    <string name="one_week">one week</string>
    <string name="day">days</string>
    <string name="one_day">one day</string>
    <string name="add">add</string>
    <string name="what_you_think">What you think?</string>
    <string name="create_story">Create story</string>
    <string name="guest">Guest</string>
    <string name="camera_image">Set camera/image</string>
    <string name="update_camera_image">Update camera/image</string>
    <string name="my_location">Set my location</string>
    <string name="location_denied_description">You cannot using location, permission denied!</string>
    <string name="permission_granted">Permission granted</string>
    <string name="open_setting">Permission denied, to manual setup inside application setting</string>
    <string name="gallery">gallery</string>
    <string name="photo">photo</string>
    <string name="unknown_take_photo">Something went wrong when taking the photo</string>
    <string name="unknown_load_photo">Something went wrong when load the photo</string>
    <string name="post_story">POSTING</string>
    <string name="fill_image">Fill document contain image</string>
    <string name="empty_description">Fill the description</string>
    <string name="coordinate_failed">Cannot get coordinate location</string>
    <string name="not_auth_message">Anda sedang tidak login, mohon unuk login terlebih dahulu</string>
    <string name="retry">retry</string>
</resources>